# stock-prediction

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: data.parquet
stock_market_prediction/: __main__.py  app.py  models.py
