[tool.poetry]
name = "stock-market-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0 <3.11.0"
yfinance = "^0.2.37"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
pyarrow = "^15.0.1"
seaborn = "^0.13.2"
plotly = "^5.19.0"
streamlit = "^1.32.0"
statsmodels = "^0.14.1"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
